+ Add controller upload file + Add serve static file on server + Refix endpoint url of each api + Document swagger
